Fix overlapping layout and responsive issues

--- a/sec5.css
+++ b/sec5.css
@@ -95,6 +95,10 @@
     height: auto;
     padding: 20px;
   }
+  span{
+    font-size: 15px;
+    top:0px;
+  }
   .box3 {
     width: 100%;
     padding: 10px;
